[package]
name = "shamir-engine"
version = "0.1.0"
edition = "2021"
description = "ShamirDB engine — DbInstance / RepoInstance / TableManager / IndexManager."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-types = { path = "../shamir-types" }
shamir-collections = { path = "../shamir-collections" }
# Backends inherit `shamir-storage`'s feature set — the engine doesn't
# need any backend-specific code, but its `BoxRepoFactory` variants
# are gated by the same flags so they cascade through.
shamir-storage = { path = "../shamir-storage", default-features = false }
# Pure DTOs for the SDBQL surface — re-exported through the engine's
# `query::*` modules so callers see no path change.
shamir-query-types = { path = "../shamir-query-types" }
# Built-in scalar + aggregate function library. Dispatched from the
# filter / set / group-by paths via the engine's shared registries.
shamir-funclib = { path = "../shamir-funclib" }
shamir-wasm-host = { path = "../shamir-wasm-host" }
shamir-tunables = { path = "../shamir-tunables" }
shamir-wal = { path = "../shamir-wal" }
shamir-tx = { path = "../shamir-tx" }
shamir-index = { path = "../shamir-index" }
# OSS capacity-telemetry: tvec!/tfxmap!/tdashmap!/... call-site macros with
# zero overhead off-feature. fxhash feature → CapHasher = FxBuildHasher
# (workspace ideology, CLAUDE.md §4). Toggle telemetry on for bench runs:
# `cargo bench -p shamir-engine --features captrack/telemetry`.
captrack = { path = "../../../captrack", features = ["fxhash"] }

# Async / runtime
tokio = { version = "1.49.0", features = ["full"] }
async-stream = "0.3"
futures = "0.3"
async-trait = "0.1.81"
bytes = "1.11.0"
dashmap = "6.1.0"

# Data
serde = { version = "1.0.217", features = ["derive"] }
fxhash = "0.2.1"
# Inline storage for field-path Vec<u64> (1-3 segments typical) —
# avoids heap alloc per FilterNode / SelectProjection. Already a
# transitive dep via several crates.
smallvec = { version = "1.11", features = ["serde"] }
rand = "0.8.5"
log = "0.4"               # log!/info!/warn! macros throughout engine
regex = "1.11.1"          # query::filter::eval Regex matcher
indexmap = { version = "2.7", features = ["serde"] }  # ordered maps in batch
rmp-serde = "1.3.0"       # query result encoding helpers
rmpv = { version = "1.3.1", features = ["serde"] }
bincode = "1.3.3"         # admin / index serialisation
serde_bytes = "0.11"      # efficient byte-slice serde for shadow log
thiserror = "2.0"         # error types throughout engine
scc = "2.2"               # lock-free concurrent hashmap (repo, validator)
arc-swap = "1.7"          # RCU-style atomic Arc swap (table_manager)

[features]
# Cascade `shamir-storage`'s per-backend features upward so callers can
# pick them at the engine level too:
#   shamir-engine = { default-features = false, features = ["redb"] }
#
# `all-backends` lists every per-backend feature explicitly (NOT just
# `shamir-storage/all-backends`) because the engine's own `BoxRepo` /
# `BoxRepoFactory` variants are gated by the engine-level features —
# enabling storage backends without enabling the matching engine
# feature would compile away the variant constructors.
default = ["all-backends"]
all-backends = ["sled", "fjall"]
# Opt-in: enables the N=100_000 long variant in the `fts_indexed` bench.
# Setup takes several seconds per fixture (seeding 100k records + FTS
# postings) and pushes past Criterion's default measurement window, so
# it's gated to keep the default `cargo bench --bench fts_indexed` run
# bounded.
fts_indexed_long = []
sled   = ["shamir-storage/sled"]
fjall  = ["shamir-storage/fjall"]

[target.'cfg(unix)'.dev-dependencies]
dhat = "0.3"

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.3.1"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
shamir-bench-utils = { path = "../shamir-bench-utils" }
# Constructing `Value::Dec` / `Value::Big` in the round-trip identity test
# (validator/query_value_conv_tests.rs). Same versions as shamir-types.
rust_decimal = { version = "1.40.0", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
# Tests build queries via the typed query builder instead of raw wire values.
# query-builder depends only on query-types/types — no cycle on engine.
shamir-query-builder = { path = "../shamir-query-builder" }
# (No dev-dep cycle on shamir-db. The two tests that needed the
# `ShamirDb` facade — `admin_tests.rs`, `auth_tests.rs` — moved to
# `crates/shamir-db/tests/` as integration tests instead. Keeping the
# cycle would have made cargo compile shamir-engine twice and the
# `BatchError` types from the two copies wouldn't match.)

[[bench]]
name = "interner_concurrent"
harness = false

[[bench]]
name = "interner_cold_growth"
harness = false

[[bench]]
name = "membuffer_concurrent"
harness = false

[[bench]]
name = "filter_eval"
harness = false

[[bench]]
name = "group_by_keys"
harness = false

[[bench]]
name = "distinct"
harness = false

[[bench]]
name = "select_pipeline"
harness = false

[[bench]]
name = "permission_check"
harness = false

[[bench]]
name = "membuffer_pump"
harness = false

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "fts_indexed"
harness = false

[[bench]]
name = "order_by_pipeline"
harness = false

[[bench]]
name = "select_projection"
harness = false

[[bench]]
name = "tx_pipeline"
harness = false

[[bench]]
name = "tx_concurrent"
harness = false

[[bench]]
name = "wasm_invoke"
harness = false

[[bench]]
name = "durable_concurrent_commit"
harness = false

[[bench]]
name = "drain_throughput"
harness = false
required-features = ["fjall", "sled"]

[[bench]]
name = "backend_matrix"
harness = false
required-features = ["fjall", "sled"]

[[bench]]
name = "read_path_matrix"
harness = false

[[bench]]
name = "drain_cost_vs_depth"
harness = false
required-features = ["fjall"]

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
