[package]
name = "shamir-index"
version = "0.1.0"
edition = "2021"
description = "ShamirDB index system — FTS / Functional / Vector backends."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-types       = { path = "../shamir-types" }
shamir-collections = { path = "../shamir-collections" }
shamir-storage     = { path = "../shamir-storage", default-features = false }
shamir-tx          = { path = "../shamir-tx" }
shamir-tunables    = { path = "../shamir-tunables" }
dashmap         = "6.1.0"

# Async / runtime
tokio       = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.81"
bytes       = "1.11.0"
futures     = "0.3"

# Data
serde      = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
bincode    = "1.3.3"
rmp-serde  = "1.3"
smallvec   = { version = "1.11", features = ["serde"] }
fxhash     = "0.2.1"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# FTS
rust-stemmers = "1.2"

# Concurrency
scc      = "2.2"
arc-swap = "1.7"

# Vector index
hnsw_rs = "0.3"

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.3.1"
shamir-storage = { path = "../shamir-storage" }

[lib]
doctest = false

[lints]
workspace = true
