[package]
name = "shamir-index"
version = "0.1.0"
edition = "2021"
description = "ShamirDB index system — FTS / Functional / Vector backends."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-types       = { path = "../shamir-types" }
shamir-collections = { path = "../shamir-collections" }
shamir-funclib     = { path = "../shamir-funclib" }
shamir-storage     = { path = "../shamir-storage", default-features = false }
shamir-tx          = { path = "../shamir-tx" }
shamir-tunables    = { path = "../shamir-tunables" }
dashmap         = "6.1.0"

# Async / runtime
tokio       = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.81"
bytes       = "1.11.0"
futures     = "0.3"

# Data
serde      = { version = "1.0.217", features = ["derive"] }
bincode    = "1.3.3"
rmp-serde  = "1.3"
smallvec   = { version = "1.11", features = ["serde"] }
fxhash     = "0.2.1"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# FTS
rust-stemmers = "1.2"

# Concurrency
scc        = "2.2"
arc-swap   = "1.7"
shamir-numa = { path = "../shamir-numa" }

# Vector index
# Pinned to an exact patch: hnsw_rs does NOT guarantee dump-format
# stability across patches, and phase P2 (snapshots) round-trips dumps
# through this exact version. A caret/minor bound would silently let a
# resolver pick 0.3.5+ and break our persisted graph files.
hnsw_rs = "=0.3.4"
# CRC32 for snapshot integrity (phase P2). Same version the WAL crate uses.
crc32fast = "1"
# `tempfile::TempDir` for the snapshot codec's dump/load scratch space
# (phase P2). The codec lives on the production path (real graph dumps at
# runtime), so this is a regular — not dev-only — dependency.
tempfile = "3.10.1"

[dev-dependencies]
serial_test = "3.3.1"
shamir-storage = { path = "../shamir-storage" }
rust_decimal = { version = "1.40.0", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
shamir-bench-utils = { path = "../shamir-bench-utils" }
bench-scale-tool = { workspace = true }

[[bench]]
name = "sq8_hot_path"
harness = false

[[bench]]
name = "posting_cache_hit"
harness = false

[[bench]]
name = "create_index_streaming"
harness = false

[lib]
doctest = false

[lints]
workspace = true
