[package]
name = "shamir-numa"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "NUMA topology abstraction + per-node replicated read-mostly state for S.H.A.M.I.R."

[lints]
workspace = true

[dependencies]
# Single-writer-many-reader RCU cell — the same primitive proven in the
# #292 / #304 ArcSwap migrations. NodeReplicated keeps one ArcSwap per node.
arc-swap = "1.7"
# Library error enum (AffinityError).
thiserror = "2.0"

[target.'cfg(target_os = "linux")'.dependencies]
# /sys probe + sched_setaffinity / sched_getcpu for LinuxTopology (Фаза 1b).
libc = "0.2"
# Fx-hashed map for the CPU->node reverse index (workspace hasher policy —
# see CLAUDE.md "Fx hash"); bare std::collections::HashMap is disallowed.
shamir-collections = { path = "../shamir-collections" }
