[package]
name = "shamir-query-builder-macros"
version = "0.1.0"
edition = "2021"
description = "Proc-macros for shamir-query-builder: filter! and q! DSLs."
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
