[package]
name = "shamir-query-builder"
version = "0.1.0"
edition = "2021"
description = "Fluent client-side builder for ShamirDB batch requests (CodeIgniter-Active-Record-style queries, typed inter-query dependencies, funclib function calls). A thin layer over shamir-query-types — produces only wire DTOs, WASM-friendly."
license = "MIT OR Apache-2.0"

[lib]
# Doctests are banned project-wide — they recompile the crate per example and
# dominate `cargo test` wall-clock. Examples stay in the docs as illustration
# (rendered, not executed); behavioural coverage lives in the `tests/` modules.
doctest = false

[dependencies]
# The only domain dependency: the pure wire DTOs the builder constructs.
shamir-query-types = { path = "../shamir-query-types", default-features = false }
shamir-collections = { path = "../shamir-collections" }
shamir-query-builder-macros = { path = "../shamir-query-builder-macros" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
rmp-serde = "1"
