[package]
name = "shamir-query-types"
version = "0.1.0"
edition = "2021"
description = "Pure DTOs for ShamirDB's SDBQL query language (Filter, ReadQuery, BatchRequest, ...)."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-types = { path = "../shamir-types" }

# Pure data dependencies — DTOs serialize to JSON / msgpack and use
# ordered maps for deterministic iteration.
serde      = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
serde_bytes = "0.11"
indexmap   = { version = "2.7", features = ["serde"] }
fxhash     = "0.2.1"

# Pure-data helpers for HMAC-confirmed destructive ops. `hmac` +
# `sha2` are stable, no-std-capable, already used elsewhere in the
# workspace (shamir-connect). Keeping the helpers in this crate
# lets both client and server share one canonical implementation.
hmac       = "0.12"
sha2       = "0.10"

# Secret-bearing newtypes for password / key fields.
zeroize    = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "batch_planner"
harness = false

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false
