[package]
name = "shamir-query-types"
version = "0.1.0"
edition = "2021"
description = "Pure DTOs for ShamirDB's SDBQL query language (Filter, ReadQuery, BatchRequest, ...)."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-collections = { path = "../shamir-collections" }
shamir-types = { path = "../shamir-types" }

# Pure data dependencies — DTOs serialize to msgpack and use
# ordered maps for deterministic iteration.
serde      = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde  = "1.3"
indexmap   = { version = "2.7", features = ["serde"] }
fxhash     = "0.2.1"

# Pure-data helpers for HMAC-confirmed destructive ops. `hmac` +
# `sha2` are stable, no-std-capable, already used elsewhere in the
# workspace (shamir-connect). Keeping the helpers in this crate
# lets both client and server share one canonical implementation.
# Behind the `crypto` feature so that guest-core (WASM) builds can
# skip heavy crypto deps.
hmac       = { version = "0.12", optional = true }
sha2       = { version = "0.10", optional = true }

# Secret-bearing newtypes for password / key fields. Optional —
# without `crypto`, SecretString still works but skips zeroize-on-drop.
zeroize    = { version = "1", features = ["derive"], optional = true }

[features]
default = ["crypto", "server"]
crypto  = ["dep:hmac", "dep:sha2", "dep:zeroize"]
server  = []

[dev-dependencies]
bench-scale-tool = { workspace = true }

[[bench]]
name = "batch_planner"
harness = false

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
