[package]
name = "shamir-sdk-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
# Doctests are banned project-wide (slow: recompile-per-example).
doctest = false

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
