[package]
name = "shamir-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
shamir-sdk-macros = { path = "../shamir-sdk-macros" }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
shamir-types = { path = "../shamir-types" }

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false
