[package]
name = "shamir-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
shamir-sdk-macros = { path = "../shamir-sdk-macros" }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
shamir-query-builder = { path = "../shamir-query-builder", optional = true }

[features]
# Builder-in-guest (SDK Stage B2): a procedure can build a full BatchRequest
# with the query builder and run it via ctx.db().execute(). Off by default so
# a scalar author pays nothing.
query-builder = ["dep:shamir-query-builder"]

[dev-dependencies]
shamir-types = { path = "../shamir-types" }
rust_decimal = "1.40"
num-bigint = "0.4"

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
