[package]
name = "shamir-server"
version = "0.1.0"
edition = "2021"
description = "ShamirDB production server — wires shamir-connect auth + transports + durable state into a runnable binary."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/shamir-db"

[lib]
name = "shamir_server"
path = "src/lib.rs"

[[bin]]
name = "shamir-server"
path = "src/main.rs"

[dependencies]
shamir-connect = { path = "../shamir-connect", features = ["server", "client", "durable-redb"] }
shamir-transport-tcp = { path = "../shamir-transport-tcp" }
shamir-transport-ws = { path = "../shamir-transport-ws" }
shamir-db = { path = "../.." }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
futures-util = "0.3"

# Durable storage
redb = "3.1"

# Config (Ktav per user request)
ktav = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"

# Encoding
rmp-serde = "1.3"
base64 = "0.22"

# Secret-bearing newtypes (UserRecord::server_key uses Zeroizing<[u8; 32]>)
zeroize = "1.7"

# Errors / logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Auxiliary
parking_lot = "0.12"
dashmap = "6.1"

[dev-dependencies]
tempfile = "3"
hex = "0.4"

[lints.clippy]
all = "warn"
