[package]
name = "shamir-server"
version = "0.1.0"
edition = "2021"
description = "ShamirDB production server — wires shamir-connect auth + transports + durable state into a runnable binary."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/shamir-db"

[lib]
name = "shamir_server"
path = "src/lib.rs"
# Doctests are banned project-wide (slow: recompile-per-example).
doctest = false

[[bin]]
name = "shamir-server"
path = "src/main.rs"

[dependencies]
shamir-connect = { path = "../shamir-connect", features = ["server", "client", "durable-redb"] }
shamir-tunables = { path = "../shamir-tunables" }
shamir-transport-tcp = { path = "../shamir-transport-tcp" }
shamir-transport-ws = { path = "../shamir-transport-ws" }
shamir-collections = { path = "../shamir-collections" }
shamir-db = { path = "../shamir-db" }
shamir-query-types = { path = "../shamir-query-types" }
shamir-query-builder = { path = "../shamir-query-builder" }
shamir-tx = { path = "../shamir-tx" }
# High-level TLS+SCRAM client — powers the `access-tree --connect` online
# mode so the one binary can introspect a *running* server, not just a
# stopped data_dir.
shamir-client = { path = "../shamir-client" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
# CancellationToken — persistent shutdown signal. Used in place of
# tokio::sync::Notify::notify_waiters which is lossy across the
# subscribe-window between polls (re-poll of `notified()` creates a
# new future each time; a notify that lands between two polls when no
# Notified future is alive is dropped). CancellationToken sets a flag
# that all future `.cancelled()` callers observe immediately — race-free.
tokio-util = "0.7"
# WebSocket transport — re-exported types appear in `framer::WsFramer`'s
# generic parameters and as the value the WS accept loop hands to it.
tokio-tungstenite = "0.24"

# Durable storage
redb = "3.1"

# Config (Ktav per user request)
ktav = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"

# Encoding
rmp-serde = "1.3"
base64 = "0.22"

# Secret-bearing newtypes (UserRecord::server_key uses Zeroizing<[u8; 32]>)
zeroize = "1.7"

# Errors / logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Lock-free RCU-style runtime log-mask swaps (single atomic load on hot path).
arc-swap = "1.7"
once_cell = "1.20"

# CLI
clap = { version = "4", features = ["derive"] }

# Single-instance guard: advisory OS file lock on data_dir (flock/LockFileEx).
fs4 = "0.12"

# Auxiliary
parking_lot = "0.12"
dashmap = "6.1"
scc = "2.2"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"

# Global allocator. mimalloc is ~2× on allocation-heavy hot paths
# (msgpack encode/decode, json::Value trees, Vec<json::Value>) vs
# the platform default. Bench measurement: db_handler/ping_inprocess
# 578 ns -> 294 ns (-44%, p=0.00).
mimalloc = { version = "0.1", default-features = false }

# Observability HTTP server (/healthz /readyz /metrics /info).
# Versions chosen to share a single `metrics` recorder with `metrics-process` —
# version skew between the metrics 0.23 / 0.24 lines silently produces empty
# /metrics output (the process metrics register against a different global).
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
metrics-process = "2"

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
fxhash = "0.2"
hex = "0.4"
serial_test = "3"
# E2E test in `tests/mvp_e2e.rs` runs a real client through TLS+SCRAM —
# brought in here too so dev-only test paths see the same crate version.
shamir-transport-tcp = { path = "../shamir-transport-tcp" }
# Fluent request builder — used by e2e tests to construct read/write batches.
shamir-query-builder = { path = "../shamir-query-builder" }
criterion = { version = "0.5", features = ["html_reports"] }
shamir-bench-utils = { path = "../shamir-bench-utils" }
# Used by subscription_hot_paths bench to construct `shamir_tx::RecordChange`
# instances (its `key`/`value` fields are `bytes::Bytes`).
bytes = "1.11.0"

[[bench]]
name = "db_handler_rps"
harness = false

[[bench]]
name = "duplex_throughput"
harness = false


[[bench]]
name = "subscription_throughput"
harness = false

[[bench]]
name = "wire_latencies"
harness = false

[[bench]]
name = "subscription_delivery"
harness = false

[[bench]]
name = "subscription_fanout"
harness = false

[[bench]]
name = "wire_pipelining"
harness = false

[lints]
workspace = true
