[package]
name = "shamir-server"
version = "0.1.0"
edition = "2021"
description = "ShamirDB production server — wires shamir-connect auth + transports + durable state into a runnable binary."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/shamir-db"

[lib]
name = "shamir_server"
path = "src/lib.rs"
# Doctests are banned project-wide (slow: recompile-per-example).
doctest = false

[[bin]]
name = "shamir-server"
path = "src/main.rs"

# ── Bench allocator switch ────────────────────────────────────────
# The `shamir-server` bin (src/main.rs) always uses sefer-alloc
# (production config) regardless of these features — this only affects
# the crate's bench binaries via crates/shamir-server/benches/bench_allocator.rs.
# Exactly ONE of these may be active at a time. Without any — system
# default (Windows HeapAlloc / glibc malloc). Mirrors shamir-db's switch.
#
#   cargo bench -p shamir-server --features bench-sefer          # sefer defaults
#   cargo bench -p shamir-server --features bench-sefer-tuned    # sefer + LargeCacheConfig
#   cargo bench -p shamir-server --features bench-mimalloc       # mimalloc
#   cargo bench -p shamir-server                                 # system
[features]
bench-sefer       = []
bench-sefer-tuned = []
bench-mimalloc    = ["dep:mimalloc"]

[dependencies]
shamir-connect = { path = "../shamir-connect", features = ["server", "client", "durable-fjall"] }
shamir-tunables = { path = "../shamir-tunables" }
shamir-transport-tcp = { path = "../shamir-transport-tcp" }
shamir-transport-ws = { path = "../shamir-transport-ws" }
shamir-collections = { path = "../shamir-collections" }
shamir-db = { path = "../shamir-db" }
shamir-query-types = { path = "../shamir-query-types" }
shamir-query-builder = { path = "../shamir-query-builder" }
shamir-tx = { path = "../shamir-tx" }
shamir-types = { path = "../shamir-types", default-features = false }
# High-level TLS+SCRAM client — powers the `access-tree --connect` online
# mode so the one binary can introspect a *running* server, not just a
# stopped data_dir.
shamir-client = { path = "../shamir-client" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
# CancellationToken — persistent shutdown signal. Used in place of
# tokio::sync::Notify::notify_waiters which is lossy across the
# subscribe-window between polls (re-poll of `notified()` creates a
# new future each time; a notify that lands between two polls when no
# Notified future is alive is dropped). CancellationToken sets a flag
# that all future `.cancelled()` callers observe immediately — race-free.
tokio-util = "0.7"
# WebSocket transport — re-exported types appear in `framer::WsFramer`'s
# generic parameters and as the value the WS accept loop hands to it.
tokio-tungstenite = "0.24"

# Durable storage
fjall = "3.0.1"

# Config (Ktav per user request)
ktav = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# Encoding
rmp-serde = "1.3"
base64 = "0.22"
# Hex encoding for HMAC-derived identifiers (e.g. `user_hash`) in log fields
# where the plaintext identity must not appear (audit C3).
hex = "0.4"

# Secret-bearing newtypes (UserRecord::server_key uses Zeroizing<[u8; 32]>)
zeroize = "1.7"

# Errors / logging
thiserror = "2.0"
# async trait — ReplSource abstraction for the follower pull-loop (R1-c).
async-trait = "0.1.81"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Lock-free RCU-style runtime log-mask swaps (single atomic load on hot path).
arc-swap = "1.7"
once_cell = "1.20"

# CLI
clap = { version = "4", features = ["derive"] }

# Single-instance guard: advisory OS file lock on data_dir (flock/LockFileEx).
fs4 = "0.12"

# Auxiliary
parking_lot = "0.12"
dashmap = "6.1"
scc = "2.2"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"

# Global allocator. Native-Rust sefer-alloc 0.2.1 with `production` feature
# (alloc-global + alloc-xthread + alloc-decommit). Chosen strategically over
# mimalloc: pure-Rust safety guarantees. Measured on release builds
# (opt-level=1 and opt-level=3): sefer-alloc is 17-22x faster than mimalloc
# on alloc-heavy setup workloads (engine_perf --test, 103 variants) — see
# docs/perf/sefer-alloc-rollout-2026-06-30.md. The earlier "mimalloc leads
# +22% on db_handler_rps" note was measured at opt-level=0 (debug) and does
# not hold at release opt levels.
sefer-alloc = { version = "0.2.1", features = ["production"] }
# Dev-only bench alternative — see the `[features]` bench allocator switch
# above. Not used by the production `shamir-server` bin.
mimalloc = { version = "0.1", default-features = false, optional = true }

# Observability HTTP server (/healthz /readyz /metrics /info).
# Versions chosen to share a single `metrics` recorder with `metrics-process` —
# version skew between the metrics 0.23 / 0.24 lines silently produces empty
# /metrics output (the process metrics register against a different global).
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
metrics-process = "2"
captrack = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
fxhash = "0.2"
serial_test = "3"
# E2E test in `tests/mvp_e2e.rs` runs a real client through TLS+SCRAM —
# brought in here too so dev-only test paths see the same crate version.
shamir-transport-tcp = { path = "../shamir-transport-tcp" }
# Fluent request builder — used by e2e tests to construct read/write batches.
shamir-query-builder = { path = "../shamir-query-builder" }
bench-scale-tool = { workspace = true, features = ["async"] }
# Used by subscription_hot_paths bench to construct `shamir_tx::RecordChange`
# instances (its `key`/`value` fields are `bytes::Bytes`).
bytes = "1.11.0"

[[bench]]
name = "db_handler_rps"
harness = false

[[bench]]
name = "duplex_throughput"
harness = false


[[bench]]
name = "subscription_throughput"
harness = false

[[bench]]
name = "wire_latencies"
harness = false

[[bench]]
name = "subscription_delivery"
harness = false

[[bench]]
name = "subscription_fanout"
harness = false

[[bench]]
name = "wire_pipelining"
harness = false

[lints]
workspace = true
