[package]
name = "shamir-storage"
version = "0.1.0"
edition = "2021"
description = "Storage backends for ShamirDB — Store trait + per-engine impls."
license = "MIT OR Apache-2.0"

[features]
# Default: all backends bundled in. Matches every consumer that didn't
# pick features explicitly — no behaviour change vs the pre-feature
# layout.
default = ["all-backends"]

# Convenience meta-feature: enables every concrete backend.
all-backends = ["redb", "sled", "fjall", "nebari", "persy", "canopy"]

# Per-backend features. Each one toggles its `dep:<crate>` so the
# corresponding storage engine + the `storage_*` module + the matching
# `BoxRepo` / `BoxRepoFactory` variant only compile when asked for.
# The in-memory backend is always available — it has no extra deps and
# is required by tests across the workspace.
redb   = ["dep:redb"]
sled   = ["dep:sled"]
fjall  = ["dep:fjall"]
nebari = ["dep:nebari"]
persy  = ["dep:persy"]
canopy = ["dep:canopydb"]

[dependencies]
# Foundation
shamir-types = { path = "../shamir-types" }

# Backends — `optional = true` makes each one pulled in only when the
# matching feature is enabled.
redb     = { version = "3.1.0",  optional = true }
fjall    = { version = "3.0.1",  optional = true }
canopydb = { version = "0.2.5",  optional = true }
sled     = { version = "0.34.7", optional = true }
nebari   = { version = "0.5.5",  optional = true }
persy    = { version = "1.7.1",  optional = true }

# Async / runtime helpers used by the trait surface and a few backends
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.81"
async-stream = "0.3"
futures = "0.3"
bytes = "1.11.0"
dashmap = "6.1.0"
# Bounded LRU for MemBufferStore. Zero transitive deps.
lru = "0.12"
# `MemBufferConfig` serializes into the engine's info_store via
# bincode at the DDL boundary.
serde = { version = "1", features = ["derive"] }

# Errors / logging
thiserror = "2.0.18"
log = "0.4"

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.3.1"
