[package]
name = "shamir-storage"
version = "0.1.0"
edition = "2021"
description = "Storage backends for ShamirDB — Store trait + per-engine impls."
license = "MIT OR Apache-2.0"

[features]
# Default: all backends bundled in. Matches every consumer that didn't
# pick features explicitly — no behaviour change vs the pre-feature
# layout.
default = ["all-backends"]

# Convenience meta-feature: enables every concrete backend.
all-backends = ["fjall"]

# Per-backend features. Each one toggles its `dep:<crate>` so the
# corresponding storage engine + the `storage_*` module + the matching
# `BoxRepo` / `BoxRepoFactory` variant only compile when asked for.
# The in-memory backend is always available — it has no extra deps and
# is required by tests across the workspace.
fjall  = ["dep:fjall"]

[dependencies]
# Foundation
shamir-types       = { path = "../shamir-types" }
shamir-collections = { path = "../shamir-collections" }
shamir-tunables    = { path = "../shamir-tunables" }

# Backends — `optional = true` makes each one pulled in only when the
# matching feature is enabled.
#
# `bytes_1` (audit 2026-07-06-perf-radical-o-notation §1.1): flips fjall's
# `Slice` to `bytes::Bytes` under the hood, exposing a zero-copy
# `From<Slice> for Bytes` impl. Without it, `Slice` is a `byteview::ByteView`
# (a separate refcounted buffer) and every read must `Bytes::copy_from_slice`
# — a full memcpy + alloc per point-read, ×2 (key+value) per scanned row.
fjall    = { version = "3.0.1", optional = true, features = ["bytes_1"] }

# Async / runtime helpers used by the trait surface and a few backends
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.81"
async-stream = "0.3"
futures = "0.3"
bytes = "1.11.0"
dashmap = "6.1.0"
# Concurrent W-TinyLFU + LRU cache for `MemBufferStore`. Lock-free
# reads via internal per-thread write buffer (Caffeine-style),
# scales linearly to physical cores. Replaces the previous
# `lru` + `Mutex<LruCache>` implementation. Built-in TTL +
# weigher-based byte capacity make our eviction/TTL/byte-cap
# loops unnecessary.
moka = { version = "0.12", features = ["future"] }
# `apply_config` hot-swaps the moka cache (rebuild on DDL); reads
# do `arc_swap.load()` (atomic load) instead of an Mutex/RwLock.
arc-swap = "1.7"
# Lock-free concurrent sorted B+ tree — backs InMemoryStore so
# `scan_prefix_stream` does O(log N + matches) range walks instead of
# the O(N) full-iter+filter the previous DashMap shape required.
scc = "3.8"
# `MemBufferConfig` serializes into the engine's info_store via
# bincode at the DDL boundary.
serde = { version = "1", features = ["derive"] }
# `KeyBytes` (§3 of docs/dev-artifacts/design/record-key-128-migration-plan.md) is a
# representation-transparent small-buffer key whose serde encoding MUST be
# byte-identical to how `bytes::Bytes` is currently (de)serialized across the
# WAL/storage boundary (see `shamir_wal::wal_entry_v2::serde_bytes_bytes`). We
# therefore impl Serialize/Deserialize manually via `serde_bytes::Bytes`, the
# exact same primitive the WAL's `Bytes` helper uses.
serde_bytes = "0.11"

# Errors / logging
thiserror = "2.0.18"
log = "0.4"

[dev-dependencies]
# For `KeyBytes` serde byte-identity tests vs `bytes::Bytes` (bincode is the
# WAL's on-disk encoding; rmp-serde covers the client-wire path used in
# shamir-client). Versions match `shamir-wal` / `shamir-client` exactly.
bincode = "1.3.3"
rmp-serde = "1"
tempfile = "3.10.1"
serial_test = "3.3.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
bench-scale-tool = { workspace = true, features = ["async"] }

[[bench]]
name = "store_raw"
harness = false

# Dedicated fjall pump — isolates point `get`/`insert`/`set` (existing-key
# path, the one that exercises the pre-mutation `contains_key` LSM lookup)
# and a small `scan_prefix` against a real tempdir-backed fjall instance.
# `store_raw` already exercises fjall, but mixes it with in-memory backends
# and has no single-key `set`/`remove` variant — this bench gives a clean
# before/after signal for the zero-copy read + double-lookup-removal /opti
# (audit 2026-07-06-perf-radical-o-notation §1.1/1.2).
[[bench]]
name = "storage_fjall_pump"
harness = false

# Cold-cache, high-fan-out fjall bench for the write-worker redesign (task
# #536). Seeds ~256 MiB (8× fjall's 32 MiB block cache) then measures
# concurrent-writer contention for both `insert` (routed through the write
# worker — the expected win) and `set` (deliberately NOT routed through the
# worker, kept as a regression-guard control — its embedded `contains_key`
# read measured a net loss when serialized onto the worker), alongside
# cold-cache scattered concurrent reads (which stay on the untouched
# `spawn_blocking` path and MUST show no regression). Deliberately heavier than
# `storage_fjall_pump`, whose small memtable-resident corpus can't expose write
# contention or cold reads — see `docs/dev-artifacts/design/fjall-worker-loop-524-findings.md`.
[[bench]]
name = "storage_fjall_write_worker"
harness = false

# Dedicated CachedStore pump — isolates the two audit
# `2026-07-06-perf-radical-o-notation` findings on the cache layer:
#   §1.4 — `transact` with `Set` must POPULATE the cache (not
#          invalidate), so read-after-write hits RAM not the backend;
#   §1.3 — `iter_stream` / `scan_prefix_stream` must yield batches
#          INCREMENTALLY (cursor/resume), not eagerly materialize the
#          whole corpus before the first yield.
# Each workload pairs an "early-exit" / "cache-hit" measurement with a
# "full" / "backend-hit" counterpart so the before→after delta is
# directly readable off the two columns.
[[bench]]
name = "storage_cached_pump"
harness = false

# MemBuffer scan-under-writes — audit finding 2.3 (task #530). Measures a full
# scan running against a MemBuffer that still has a dirty write buffer. Before
# the merge-overlay fix, EVERY scan force-drained the dirty buffer to the
# (real, tempdir-backed fjall) inner store first — read-triggered write
# amplification. `scan_with_dirty` (writes-then-scan) vs `scan_only`
# (already-flushed control) isolates the amplification delta.
[[bench]]
name = "membuffer_scan_under_writes"
harness = false

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
