[package]
name = "shamir-transport-tcp"
version = "0.1.0"
edition = "2021"
description = "ShamirDB TCP transport binding — TLS 1.3 + length-prefix msgpack framing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/shamir-db"

[dependencies]
shamir-connect = { path = "../shamir-connect", default-features = false, features = ["client", "server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
# PEM parsing via the `PemObject` trait — `rustls-pemfile` is unmaintained
# (RUSTSEC-2025-0134); its own README points here as the direct replacement.
rustls-pki-types = "1.9"

# Errors
thiserror = "2.0"

# Zeroize TLS private-key buffers on drop.
zeroize = "1"

[dev-dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1.3"
bench-scale-tool = { workspace = true, features = ["async"] }

[[bench]]
name = "framing"
harness = false

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
