[package]
name = "shamir-transport-ws"
version = "0.1.0"
edition = "2021"
description = "ShamirDB WebSocket transport binding — native WSS (binding_mode=0x01) + browser WSS (binding_mode=0x02). TLS 1.3 only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/PHPCraftdream/shamir-db"

[dependencies]
shamir-connect = { path = "../shamir-connect", default-features = false, features = ["client", "server"] }
shamir-transport-tcp = { path = "../shamir-transport-tcp" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.29"

# TLS (re-exported from shamir-transport-tcp's choice)
rustls = "0.23"
tokio-rustls = "0.26"

# Errors
thiserror = "2.0"

# HTTP for header inspection (Origin)
http = "1"

[dev-dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1.3"

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
